--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jaishan.handicraftstore">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_hlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_hlogo"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.jaishan.handicraftstore.LoginRegisterActivity"></activity>
         <activity android:name="com.jaishan.handicraftstore.ui.RegisterActivity" />
         <activity android:name="com.jaishan.handicraftstore.ui.LoginActivity"></activity>
+        <activity android:name=".ui.dashboard.Accelerometer" />
+        <activity android:name=".ui.message.AboutUsFragment" />
+
+        <activity android:name=".ui.dashboard.Gyro" />
+        <activity android:name=".ui.dashboard.Proximity" />
         <activity android:name="com.jaishan.handicraftstore.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
